--- a/src/main/resources/public/MonitorPage.html
+++ b/src/main/resources/public/MonitorPage.html
@@ -19,8 +19,9 @@
         
         <div class="currentPrice">
             <h1>Current Price</h1>
-            <table>
-                <thead>
+            <div class="priceTableContainer">
+                <table >
+                    <thead>
                     <tr>
                         <th>Symbol</th>
                         <th>USD</th>
@@ -28,9 +29,9 @@
                         <th>EUR</th>
                         <th>Date</th>
                     </tr>
-                </thead>
-                
-                <tbody>
+                    </thead>
+
+                    <tbody>
                     <tr>
                         <td id="symbol"></td>
                         <td id="usd"></td>
@@ -38,8 +39,9 @@
                         <td id="eur"></td>
                         <td id="date"></td>
                     </tr>
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <div class="Bottom">
