--- a/src/main/resources/public/MonitorPage.html
+++ b/src/main/resources/public/MonitorPage.html
@@ -43,7 +43,9 @@
         </div>
     </div>
     <div class="Bottom">
-        <canvas id="graph" class="graph"></canvas>
+        <div class="graphContainer">
+            <canvas id="graph"></canvas>
+        </div>
     </div>
 </body>
 </html>
