--- a/src/main/resources/public/MonitorPage.html
+++ b/src/main/resources/public/MonitorPage.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="MonitorStyle.css">
-    <link rel="stylesheet" href="MonitorTopStyle.css">
-    <link rel="stylesheet" href="MonitorBottomStyle.css">
+    <link rel="stylesheet" type="text/css" href="./MonitorStyle.css?version=1">
+    <link rel="stylesheet" type="text/css" href="./MonitorTopStyle.css?version=1">
+    <link rel="stylesheet" type="text/css" href="./MonitorBottomStyle.css?version=1">
 
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
-    <script src="WebsocketConnection.js"></script>
+    <script src="./WebsocketConnection.js"></script>
 </head>
 <body>
     <div class="Top">
