Graph auto update

--- a/src/main/resources/public/MonitorPage.html
+++ b/src/main/resources/public/MonitorPage.html
@@ -13,6 +13,7 @@
 
     <script src="./WebsocketConnection.js?version=1"></script>
     <script src="./Graph.js?version=1"></script>
+    <script src="./OnLaunch.js?version=1"></script>
 </head>
 <body>
     <div class="Top">
